<resources>
    <string name="app_name">ChatApp</string>
    <string name="default_status">Hi</string>
    <string name="name">Name</string>
    <string name="phono">Phone Number</string>
    <string name="login">Login</string>
    <string name="contacts">Contacts</string>
    <string name="enter_message">Say Something...</string>
    <string name="not_connected">Not connected</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="init_app">Initializing Application</string>
    <string name="mute">Mute</string>
    <string name="status">Status</string>
    <string name="number">Number</string>
    <string name="username">Username</string>
    <string name="init_failed">Initialization failed</string>
    <string name="fill_all_fields">Fill in all fields</string>
    <string name="loading_peeps">Loading your peeps...</string>
    <string name="this_may_take_some_time">This may take some time</string>
    <string name="reconnecting">Reconnecting...</string>
    <string name="wallpaper">Wallpaper</string>
</resources>
