<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="126dp"
            android:visibility="gone"
            android:layout_height="126dp"
            android:layout_gravity="center" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/photo"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center"
            android:layout_margin="24dp"
            android:src="@drawable/ic_account_white_56dp"
            app:civ_border_color="@android:color/white"
            app:civ_border_width="2dp" />
    </FrameLayout>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/border_field"
        android:hint="@string/username"
        android:padding="10dp"
        android:singleLine="true"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/border_field"
        android:hint="@string/name"
        android:inputType="textCapSentences"
        android:padding="10dp"
        android:singleLine="true"
        android:textSize="18sp" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="?attr/colorAccent"
        android:text="@string/save"
        android:textColor="@android:color/white" />
</LinearLayout>