<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.architjn.myapp.ui.activity.UserProfileActivity">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#0f123e">

            <ImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:scaleType="centerCrop"
                android:src="@drawable/user_default" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="300dp"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/fade_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:layout_marginTop="-50dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:textColor="@android:color/white"
                        android:textSize="38dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="#141855"
                        android:elevation="2dp"
                        android:foreground="?attr/selectableItemBackground"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/mute"
                            android:textColor="@android:color/white"
                            android:textSize="20sp" />

                        <Switch
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:background="#141855"
                        android:elevation="2dp"
                        android:foreground="?attr/selectableItemBackground"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/status"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:id="@+id/status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:textColor="@android:color/white"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:background="#141855"
                        android:elevation="2dp"
                        android:foreground="?attr/selectableItemBackground"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/number"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:id="@+id/phno"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:textColor="@android:color/white"
                            android:textSize="20sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </android.support.v4.widget.NestedScrollView>
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:title="" />
</FrameLayout>
